[package]
name = "tv-robot"
version = "0.1.0"
authors = ["Larry850806 <pudding850806@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enigo = "0.0.14"
actix-web = { version = "2.0.0", default-features = false, features = [] }
actix-rt = "1.1.1"
actix-files = "0.2.2"
local-ip = "0.1.0"
qr2term = "0.2.1"

